# translation-service-challenge

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  flake.nix  pyproject.toml
app/: db.py  gemini_utils.py  main.py  setup.py
app/models/: translation.py
app/repositories/: translation.py
app/routers/: translation.py
tests/: mongo_client.py  test_create_translation.py  test_delete_translation.py  test_get_all_translations.py
tests/mock_data/: translation.json
